# pcv4

./: README.md
elastic_task_queue/: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
elastic_task_queue/cmake/: install-config.cmake  install-rules.cmake  variables.cmake
elastic_task_queue/include/elastic_task_queue/: .elastic_task_queue.hpp.swp  .producer.hpp.swp  elastic_task_queue.hpp  err.h  producer.hpp  task.h
elastic_task_queue/source/: .elastic_task_queue.cpp.swp  .producer.cpp.swp  elastic_task_queue.cpp  producer.cpp
elastic_task_queue/test/: CMakeLists.txt
elastic_task_queue/test/source/: elastic_task_queue_test.cpp
